@@ -871,6 +871,10 @@ class RepositoryFormat(object):
         """
         raise NotImplementedError(self.get_format_string)
 
+    def get_format_description(self):
+        """Return the short desciption for this format."""
+        raise NotImplementedError(self.get_format_description)
+
     def _get_revision_store(self, repo_transport, control_files):
         """Return the revision store object for this a_bzrdir."""
         raise NotImplementedError(self._get_revision_store)
@@ -1041,6 +1045,10 @@ class RepositoryFormat4(PreSplitOutRepositoryFormat):
         super(RepositoryFormat4, self).__init__()
         self._matchingbzrdir = bzrlib.bzrdir.BzrDirFormat4()
 
+    def get_format_description(self):
+        """See RepositoryFormat.get_format_description()."""
+        return "Repository format 4"
+
     def initialize(self, url, shared=False, _internal=False):
         """Format 4 branches cannot be created."""
         raise errors.UninitializableFormat(self)
@@ -1086,6 +1094,10 @@ class RepositoryFormat5(PreSplitOutRepositoryFormat):
         super(RepositoryFormat5, self).__init__()
         self._matchingbzrdir = bzrlib.bzrdir.BzrDirFormat5()
 
+    def get_format_description(self):
+        """See RepositoryFormat.get_format_description()."""
+        return "Weave repository format 5"
+
     def _get_revision_store(self, repo_transport, control_files):
         """See RepositoryFormat._get_revision_store()."""
         """Return the revision store object for this a_bzrdir."""
@@ -1111,6 +1123,10 @@ class RepositoryFormat6(PreSplitOutRepositoryFormat):
     def __init__(self):
         super(RepositoryFormat6, self).__init__()
         self._matchingbzrdir = bzrlib.bzrdir.BzrDirFormat6()
+
+    def get_format_description(self):
+        """See RepositoryFormat.get_format_description()."""
+        return "Weave repository format 6"
 
     def _get_revision_store(self, repo_transport, control_files):
         """See RepositoryFormat._get_revision_store()."""
@@ -1180,6 +1196,10 @@ class RepositoryFormat7(MetaDirRepositoryFormat):
     def get_format_string(self):
         """See RepositoryFormat.get_format_string()."""
         return "Bazaar-NG Repository format 7"
+
+    def get_format_description(self):
+        """See RepositoryFormat.get_format_description()."""
+        return "Weave repository format 7"
 
     def _get_revision_store(self, repo_transport, control_files):
         """See RepositoryFormat._get_revision_store()."""
@@ -1270,6 +1290,10 @@ class RepositoryFormatKnit1(MetaDirRepositoryFormat):
     def get_format_string(self):
         """See RepositoryFormat.get_format_string()."""
         return "Bazaar-NG Knit Repository Format 1"
+
+    def get_format_description(self):
+        """See RepositoryFormat.get_format_description()."""
+        return "Knit repository format 1"
 
     def _get_revision_store(self, repo_transport, control_files):
         """See RepositoryFormat._get_revision_store()."""
